tests/neg-custom-args/captures/existential-mapping.check
-- Error: tests/neg-custom-args/captures/existential-mapping.scala:46:10 -----------------------------------------------
46 |  val z2: (x: A^) => Array[C^] = ??? // error
   |          ^^^^^^^^^^^^^^^^^^^^
   |          Array[C^]^{any.rd} captures the root capability `any` in invariant position.
   |          This capability cannot be converted to an existential in the result type of a function.
   |
   |          where:    ^ and any refer to the root capability caps.any
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:9:25 ---------------------------
9 |  val _:  (x: C^) -> C = x1 // error
  |                         ^^
  |                        Found:    (x1 : (x: C^) -> C^{fresh})
  |                        Required: (x: C^) -> C
  |
  |                        Note that capability `fresh` is not included in capture set {}.
  |
  |                        where:    ^     refers to the root capability caps.any
  |                                  fresh is a root capability associated with the result type of (x: C^): C^{fresh}
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:12:20 --------------------------
12 |  val _:  C^ -> C = x2 // error
   |                    ^^
   |                    Found:    C^ -> C^{x2*}
   |                    Required: C^ -> C
   |
   |                    Note that capability `x2*` is not included in capture set {}.
   |
   |                    where:    ^ refers to the root capability caps.any
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:15:30 --------------------------
15 |  val _: A^ -> (x: C^) -> C = x3 // error
   |                              ^^
   |                      Found:    (x3 : A^ -> (x: C^) -> C^{fresh})
   |                      Required: A^ -> (x: C^) -> C
   |
   |                      Note that capability `fresh` is not included in capture set {}.
   |
   |                      where:    ^     refers to the root capability caps.any
   |                                fresh is a root capability associated with the result type of (x: C^): C^{fresh}
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:18:25 --------------------------
18 |  val _: A^ -> C^ -> C = x4 // error
   |                         ^^
   |                         Found:    A^ -> C^ -> C^{x4*}
   |                         Required: A^ -> C^ -> C
   |
   |                         Note that capability `x4*` is not included in capture set {}.
   |
   |                         where:    ^ refers to the root capability caps.any
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:21:30 --------------------------
21 |  val _: A^ -> (x: C^) -> C = x5 // error
   |                              ^^
   |                      Found:    (x5 : A^ -> (x: C^) -> C^{fresh})
   |                      Required: A^ -> (x: C^) -> C
   |
   |                      Note that capability `fresh` is not included in capture set {}.
   |
   |                      where:    ^     refers to the root capability caps.any
   |                                fresh is a root capability associated with the result type of (x: C^): C^{fresh}
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:24:30 --------------------------
24 |  val _: A^ -> (x: C^) => C = x6 // error
   |                              ^^
   |                      Found:    A^ -> (x: C^) ->{x6*} C^{fresh}
   |                      Required: A^ -> (x: C^) => C
   |
   |                      Note that capability `fresh` is not included in capture set {}.
   |
   |                      where:    =>    refers to a root capability in the type of value _$6
   |                                ^     refers to the root capability caps.any
   |                                fresh is a root capability associated with the result type of (x: C^): C^{fresh}
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:27:25 --------------------------
27 |  val _:  (x: C^) => C = y1 // error
   |                         ^^
   |                      Found:    (y1 : (x: C^) ->{any} C^{fresh})
   |                      Required: (x: C^) ->{any²} C
   |
   |                      Note that capability `any` is not included in capture set {any²}.
   |
   |                      where:    ^     refers to the root capability caps.any
   |                                any   is a root capability in the type of value y1
   |                                any²  is a root capability in the type of value _$7
   |                                fresh is a root capability associated with the result type of (x: C^): C^{fresh}
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:30:20 --------------------------
30 |  val _:  C^ => C = y2 // error
   |                    ^^
   |                    Found:    C^ ->{y2} C^{y2*}
   |                    Required: C^ => C
   |
   |                    Note that capability `y2*` is not included in capture set {}.
   |
   |                    where:    => refers to a root capability in the type of value _$8
   |                              ^  refers to the root capability caps.any
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:33:30 --------------------------
33 |  val _: A^ => (x: C^) => C = y3 // error
   |                              ^^
   |                      Found:    A^ ->{y3} (x: C^) ->{y3*} C^{fresh}
   |                      Required: A^ => (x: C^) =>² C
   |
   |                      Note that capability `fresh` is not included in capture set {}.
   |
   |                      where:    =>    refers to a root capability in the type of value _$9
   |                                =>²   refers to a root capability in the type of value _$9
   |                                ^     refers to the root capability caps.any
   |                                fresh is a root capability associated with the result type of (x: C^): C^{fresh}
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:36:25 --------------------------
36 |  val _: A^ => C^ => C = y4 // error
   |                         ^^
   |                         Found:    A^ ->{y4} C^ ->{y4*} C^{y4*}
   |                         Required: A^ => C^ =>² C
   |
   |                         Note that capability `y4*` is not included in capture set {}.
   |
   |                         where:    =>  refers to a root capability in the type of value _$10
   |                                   =>² refers to a root capability in the type of value _$10
   |                                   ^   refers to the root capability caps.any
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:39:30 --------------------------
39 |  val _: A^ => (x: C^) -> C = y5 // error
   |                              ^^
   |                      Found:    (y5 : A^ ->{any} (x: C^) -> C^{fresh})
   |                      Required: A^ ->{any²} (x: C^) -> C
   |
   |                      Note that capability `any` is not included in capture set {any²}.
   |
   |                      where:    ^     refers to the root capability caps.any
   |                                any   is a root capability in the type of value y5
   |                                any²  is a root capability in the type of value _$11
   |                                fresh is a root capability associated with the result type of (x: C^): C^{fresh}
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:42:30 --------------------------
42 |  val _: A^ => (x: C^) => C = y6 // error
   |                              ^^
   |                      Found:    A^ ->{y6} (x: C^) ->{y6*} C^{fresh}
   |                      Required: A^ => (x: C^) =>² C
   |
   |                      Note that capability `fresh` is not included in capture set {}.
   |
   |                      where:    =>    refers to a root capability in the type of value _$12
   |                                =>²   refers to a root capability in the type of value _$12
   |                                ^     refers to the root capability caps.any
   |                                fresh is a root capability associated with the result type of (x: C^): C^{fresh}
   |
   | longer explanation available when compiling with `-explain`
